# ansible-role-tripleo-nova

./: .gitreview  README.md  ansible.cfg  setup.cfg
meta/: main.yml
